<resources>
    <string name="app_name">Almacen Pago</string>
    <string name="ingresar_usuario">User</string>
    <string name="ultimas_compras">Items Bought</string>
    <string name="saldo">Balance</string>
    <string name="user_name">Kevin Berg</string>
    <string name="nav_abrir_drawer">Open Navigation Drawer</string>
    <string name="nav_cerrar_drawer">Close Navigation Drawer</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="insert_password">Insert Password</string>
    <string name="insertEmail">Insert Email</string>
    <string name="insert_user_name">Insert your first name</string>
    <string name="insert_user_surname">Insert your last name</string>
    <string name="insert_password_again">Insert Password again</string>
    <string name="insertNombreProducto">Insert the name of the product</string>
    <string name="insertDescripcionProducto">Insert a description</string>
    <string name="insertImage">Insert an image</string>
    <string name="insertPrice">Insert the price</string>
    <string name="button_insert_product">Publish Product</string>
    <string name="insert_image">Select an image</string>
    <string name="logout">Logout</string>
    <string name="is_logged_in">is already logged in</string>
    <string name="agregar_producto">Add new Product</string>
    <string name="buy">Buy</string>
    <string name="ingrese_clave_tarjeta">Input your credit card number</string>
    <string name="ingrese_numero_tarjeta">Input your credit card key</string>
    <string name="usted_esta_comprando">You are buying</string>
    <string name="missing_info">Some info is missing!</string>
    <string name="error_sql">Error with the Database</string>
    <string name="compra_exitosa">Successful purchase!</string>
    <string name="must_be_logged_in">You must be logged in to do this!</string>
    <string name="bought_products">Bought Products</string>
    <string name="delete_product">Stop selling this product</string>
    <string name="ya_existe_producto">Product alredy exists!</string>
    <string name="producto_agregado_exito">Product added successfully</string>
    <string name="campos_incompletos">Some fields are incomplete</string>
    <string name="login_exitoso">Successful Login</string>
    <string name="logut_exitoso">Successful logout</string>
    <string name="error_is_not_login">Error. Are you Logged In?</string>
    <string name="user_alredy_exists">User alredy exists!</string>
    <string name="user_created_success">User created successfully. Now you can Login</string>
    <string name="verify_input">Verify input</string>
    <string name="favorito">Star</string>
    <string name="added_fav">"Added to favorites!"</string>
    <string name="insert_stock">Insert stock</string>
    <string name="cantidad">Available ammount</string>
    <string name="input_value">Input Value</string>
    <string name="seller_area">Seller Area</string>
    <string name="add_stock">Add Stock</string>
    <string name="no_stock">There is no stock</string>
    <string name="error_datos">Some of the fields are wrong. Do you have an account?</string>
    <string name="resell">Start selling</string>
    <string name="compra_fecha">Date bought</string>

</resources>